--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,18 @@ dependencies {
     compile project(':libgif')
     compile project(':libsuperslim')
 
-
-
+    testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.10.19"
+    testCompile 'org.powermock:powermock-module-junit4:1.6.2'
+    testCompile 'org.powermock:powermock-module-test-easymock-junit410:1.6.2'
+    testCompile  'org.easymock:easymock:3.3.1'
+//    androidTestCompile('org.mockito:mockito-core:1.9.5'){
+//        exclude group: 'org.hamcrest'
+//    }
+//
+//    androidTestCompile('org.powermock:powermock-module-junit4:1.5'){
+//        exclude group: 'org.hamcrest'
+//    }
     compile project.photo_view
     provided project.dagger_compiler
 }
