--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ dependencies {
     compile project(':core')
     compile project(':libgif')
     compile project(':libsuperslim')
+    compile project(':picasso')
+
 
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.10.19"
