--- a/settings.gradle
+++ b/settings.gradle
@@ -6,6 +6,7 @@ include 'app'
 
 def libs = [
         'picasso',
+        'blurry',
         'libphoneformat',
         'libsuperslim',
         'libtd',
