--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-//apply plugin: 'me.tatarka.retrolambda'
 
 dependencies {
 
@@ -13,6 +12,7 @@ dependencies {
     compile project.flow_path
     compile project.mortar
     compile project.mortar_dagger1support
+    compile project(':libsuperslim')
 
     compile project.jodatime
 
@@ -24,7 +24,6 @@ dependencies {
     compile project(":libopus")
     compile project(":libphoneformat")
 
-    compile project(":libpagerslidingtabstrip2")
 
     testCompile 'junit:junit:4.12'
     testCompile "org.mockito:mockito-core:1.9.5"
@@ -33,15 +32,4 @@ dependencies {
     }
 }
 
-//android {
-//    compileSdkVersion project.compileSdkVersion
-//    buildToolsVersion project.buildToolsVersion
-//    defaultConfig {
-//        minSdkVersion project.minSdkVersion
-//        compileSdkVersion project.compileSdkVersion
-//    }
-//    compileOptions {
-//        sourceCompatibility JavaVersion.VERSION_1_7
-//        targetCompatibility JavaVersion.VERSION_1_7
-//    }
-//}
+
