--- a/libs/blur/build.gradle
+++ b/libs/blur/build.gradle
@@ -5,9 +5,13 @@ android {
         renderscriptTargetApi 22
         renderscriptSupportModeEnabled true
     }
+    sourceSets.main {
+        jniLibs.srcDir 'src/libs'
+        jni.srcDirs = [] //disable automatic ndk-build call
+    }
 }
 dependencies {
 
-    compile files("libs/renderscript-v8.jar")//22.0.1
+    compile files("renderscript-v8.jar")//22.0.1
     //todo wtf? should not the plugin add it
 }
