--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 
     <application
             android:label="@string/app_name"
-            android:icon="@drawable/ic_launcher"
+            android:icon="@drawable/ic_telegram"
             android:name="ru.korniltsev.telegram.core.app.MyApp"
             android:theme="@style/AppTheme"
             android:hardwareAccelerated='true'>
